# i18n

./: pyproject.toml
src/openstb/i18n/: hatch_hooks.py  support.py
tests/: conftest.py  test_support.py
