# SPDX-FileCopyrightText: openSTB contributors
# SPDX-License-Identifier: BSD-2-Clause-Patent

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openstb-i18n"
description = "Internationalisation support for openSTB projects"
requires-python = ">=3.11"
dynamic = ["version"]

[project.entry-points.hatch]
openstb-i18n = "openstb.i18n.hatch_hooks"


#
# Build system configuration.
#


[tool.hatch.build.targets.wheel]
packages = ["src/openstb"]
exclude = [
  ".gitignore",
]

[tool.hatch.version]
source = "vcs"


#
# Test configuration.
#


[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
  "--import-mode=importlib",
]


#
# Configuration of linting tools.
#


[tool.flake8]
# You need to have the flake8-pyproject plugin installed as flake8 does not
# natively support pyproject.toml yet.
max-line-length = 88
ignore = ["E203", "W503"]
per-file-ignores = [
  "__init__.py:F401",
]

[tool.isort]
profile = "black"
src_paths = ["src"]
lines_after_imports = 2
atomic = true
combine_as_imports = true
force_sort_within_sections = true
